# WorldCreator

./: .gitignore  CMakeLists.txt  README.md
glsl/: frag.glsl  vert.glsl
heads/: app.h  block.h  camera.h  chunk.h  gen.h  generation.h  mesh.h  shader.h  texture.h  types.h  world.h  wrcr.h
heads/glad/: glad.h
srcs/: camera.cpp  chunk.c  gen.c  generation.c  main.c  mesh.c  shader.c  texture.c  world.c  wrcr.c
srcs/glad/: glad.c
